--- a/src/Init/index.html
+++ b/src/Init/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>NE-Template</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <h1>👹 Hello World! 👹</h1>
+    <p>Welcome to your Node - Electron application.</p>
+    <a href="../clicker/clicker.html"><button>Clicker</button></a>
   </body>
   <script type="module" src="./main.js"></script>
 </html>
