Añadida pantalla de carga

--- a/src/Init/index.html
+++ b/src/Init/index.html
@@ -6,11 +6,10 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>👹 Hello World! 👹</h1>
-    <p>Welcome to your Node - Electron application.</p>
-    <img id="publisher" class="hide" src="./photo1662911206.jpeg" alt="" />
-    <img id="publisher" class="hide" src="./photo1663087177.jpeg" alt="" />
-    <a href="../clicker/clicker.html"><button>Clicker</button></a>
+    <div class="publi">
+      <img id="publisher" class="hide" src="./photo1662911206.jpeg" alt="" />
+      <img id="publisher" class="hide" src="./photo1663087177.jpeg" alt="" />
+    </div>
   </body>
   <script type="module" src="./Front.js"></script>
 </html>
