--- a/src/Main Page/index.html
+++ b/src/Main Page/index.html
@@ -10,6 +10,8 @@
   <body>
     <h1>👹 Main Menu 👹</h1>
     <hr />
+    <p id="result"></p>
+    <hr />
     <div id="botonera">
       <a href="../clicker/clicker.html" id="btn">Clicker</a>
     </div>
