--- a/src/Main Page/index.html
+++ b/src/Main Page/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="../../node_modules/@picocss/pico/css/pico.css"
+    />
     <link rel="stylesheet" href="./index.css" />
     <title>👹</title>
   </head>
@@ -13,7 +17,7 @@
     <p id="result"></p>
     <hr />
     <div id="botonera">
-      <a href="../clicker/clicker.html" id="btn">Clicker</a>
+      <a href="../clicker/clicker.html" id="btn"><button>Clicker</button></a>
     </div>
   </body>
   <script src="./index.js"></script>
